# app

./: .env  .env.branch  .envrc  .gitallowed  .gitattributes  .gitignore  AUTO_ENVIRONMENT_GUIDE.md  BRANCH_AUTO_ENV_GUIDE.md  DAILY_SETUP_GUIDE.md  DEPLOYMENT_IMPROVEMENTS.md  DEVELOPMENT_FEATURES.md  DEVELOPMENT_TESTING_GUIDE.md  DEVELOPMENT_WORKFLOW.md  Dockerfile  FINAL_WORKFLOW.md  PRODUCTION_DEPLOYMENT.md  README.md  README_ENVIRONMENT.md  STRIPE_PRODUCTION_SETUP.md  ULTIMATE_SOLUTION.md  app.py  auto-env.py  check_users.py  cleanup-deployment.sh  cleanup-docker.sh  cleanup-server.sh  create_immediate_meeting.py  create_meeting.py  create_test_meeting.py  database_schema_tree.txt  debug_meeting.py  demo_features.py  deploy-fix.sh  deploy.sh  diagnose-and-fix.sh  docker-compose.prod.yml  docker-compose.yml  droply-alias.sh  entrypoint.sh  env-auto.sh  (+41 more)
agents/: README.md  __init__.py  flask_integration.py  integration_example.py  natural_language_interface.py  procura_ai.py
attached_assets/: Pasted-Droply-Product-Requirements-Document-PRD-1-Overview-1-1-Product-Name-Droply-1-2-Product-Vision-Dr-1749084267662.txt
docs/: PRODUCTION_CHECKLIST.md  PROFILE_OPTIMIZATION_GUIDE.md  REFERRAL_SYSTEM.md  STRIPE_CONNECT_SETUP.md  VIDEO_CALLING_SETUP.md
instance/: droply.db
templates/: 404.html  500.html  account.html  account_settings.html  availability.html  base.html  base_signed_in.html  booking.html  booking_confirmation.html  bookings.html  calendar.html  cancel.html  dashboard.html  dashboard_privacy_policy.html  dashboard_terms_of_service.html  discover.html  (+45 more)
(+41 files in other folders)
