[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-wtf>=1.2.2",
    "wtforms>=3.2.1",
    "sqlalchemy>=2.0.41",
    "stripe>=12.2.0",
    "werkzeug>=3.1.3",
    "python-dotenv>=1.0.0",
    "APScheduler>=3.10.0",
    "authlib>=1.3.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    # "numpy>=1.24.0",
    # "faiss-cpu>=1.7.4",
    # "sentence-transformers>=2.2.0",
]
